--- a/templates/intranet/group_manager/form.html
+++ b/templates/intranet/group_manager/form.html
@@ -5,6 +5,12 @@
 <h1>{{ page_title }}</h1>
 </header>
 <form class="well" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
   {{ form|bootstrap }}
+  <div class="control-group">
+    <div class="controls">
+      <button type="submit" class="btn btn-primary">Save</button>
+    </div>
+  </div>
 </form>
 {% endblock %}
